# 088-data-driven-decision-making

./: POC-02.ipynb  README.md  pyproject.toml  step-00.py  step-01.py  step-02.py  step-03.py  step-04.py  step-05.py  step-06.py  step-07.py  step-08.py  step-09.py  step-10.py  step-11.py  step-12.py  step-13.py  step-14.py  step-15.py  step-16.py
output/: base_step_00_yahoo_finance.csv  base_step_03_auditoria.csv  base_step_04_qualitativas.csv  base_step_04_quantitativas.csv  base_step_05_dicionario.csv  base_step_05_world_bank_limpa.csv  base_step_05_yahoo_limpa.csv  base_step_06_nash_equilibrio.csv  base_step_07_stackelberg_resultado.csv  base_step_08_pareto_portfolios.csv
pages/: step-06.html  step-07.html
